--- a/DomyScore/.github/workflow/update-json.yml
+++ b/DomyScore/.github/workflow/update-json.yml
@@ -1,32 +1,37 @@
-name: Update JSON
+name: Deploy to GitHub Pages
 
 on:
-  workflow_dispatch:
-    inputs:
-      new_data:
-        description: 'Nouvelles parties JSON (tableau)'
-        required: true
+  push:
+    branches: [ "main" ]  # Déclenche sur push vers main
+  workflow_dispatch:  # Permet de déclencher manuellement
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  update-json:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Installer jq
-        run: sudo apt-get install jq
+    - name: Setup Pages  # Pas de build pour site statique, mais prépare pour déploiement
+      uses: actions/configure-pages@v5
 
-      - name: Mettre à jour data.json
-        run: |
-          new_data='${{ github.event.inputs.new_data }}'
-          jq --argjson new "$new_data" '. += $new' data.json > temp.json
-          mv temp.json data.json
+    - name: Upload artifact  # Upload les fichiers statiques
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '.'  # Déploie depuis la racine (tout le dépôt)
 
-      - name: Commit et push les changements
-        run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git add data.json
-          git commit -m 'Mise à jour des scores via dispatch' || echo "Pas de changements"
-          git push
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
