--- a/.github/workflow/update-json.yml
+++ b/.github/workflow/update-json.yml
@@ -1,37 +1,36 @@
-name: Deploy to GitHub Pages
+name: Update JSON
 
 on:
-  push:
-    branches: [ "main" ]  # Déclenche sur push vers main
-  workflow_dispatch:  # Permet de déclencher manuellement
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  workflow_dispatch:
+    inputs:
+      new_data:
+        description: 'Nouvelles parties JSON (tableau)'
+        required: true
 
 jobs:
-  build:
+  update-json:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_TOKEN }}  # Secret GitHub pour checkout/push
 
-    - name: Setup Pages  # Pas de build pour site statique, mais prépare pour déploiement
-      uses: actions/configure-pages@v5
+      - name: Install jq
+        run: sudo apt-get install jq
 
-    - name: Upload artifact  # Upload les fichiers statiques
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: '.'  # Déploie depuis la racine (tout le dépôt)
+      - name: Update data.json
+        run: |
+          new_data='${{ github.event.inputs.new_data }}'
+          jq --argjson new "$new_data" '. += $new' data.json > temp.json
+          mv temp.json data.json
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add data.json
+          git commit -m 'Update scores via Cloudflare Worker' || echo "No changes"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
