--- a/.github/workflow/update-json.yml
+++ b/.github/workflow/update-json.yml
@@ -1,5 +1,9 @@
 name: Update JSON
 
+permissions:
+  contents: write  # Nécessaire pour push/checkout
+  actions: write   # Pour déclencher d'autres workflows si besoin
+
 on:
   workflow_dispatch:
     inputs:
@@ -14,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }}  # Secret GitHub pour checkout/push
+          token: ${{ secrets.GITHUB_TOKEN }}  # Utilise GITHUB_TOKEN par défaut
 
       - name: Install jq
         run: sudo apt-get install jq
@@ -32,5 +36,3 @@ jobs:
           git add data.json
           git commit -m 'Update scores via Cloudflare Worker' || echo "No changes"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
