--- a/.github/workflow/update-json.yml
+++ b/.github/workflow/update-json.yml
@@ -1,8 +1,8 @@
 name: Update JSON
 
 permissions:
-  contents: write  # Nécessaire pour push/checkout
-  actions: write   # Pour déclencher d'autres workflows si besoin
+  contents: write  # Pour checkout, commit, push de data.json
+  actions: write   # Pour déclencher d'autres actions si besoin
 
 on:
   workflow_dispatch:
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Utilise GITHUB_TOKEN par défaut
+          token: ${{ secrets.GH_TOKEN }}  # Utilise votre fine-grained token
 
       - name: Install jq
         run: sudo apt-get install jq
@@ -26,6 +26,8 @@ jobs:
       - name: Update data.json
         run: |
           new_data='${{ github.event.inputs.new_data }}'
+          # Si data.json n'existe pas, créez-le
+          if [ ! -f data.json ]; then echo '[]' > data.json; fi
           jq --argjson new "$new_data" '. += $new' data.json > temp.json
           mv temp.json data.json
 
@@ -36,3 +38,5 @@ jobs:
           git add data.json
           git commit -m 'Update scores via Cloudflare Worker' || echo "No changes"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
